Fix overflowing of commits

--- a/styles/pr-timeline.less
+++ b/styles/pr-timeline.less
@@ -63,6 +63,7 @@
       max-height: @avatar-size;
       text-overflow: ellipsis;
       white-space: nowrap;
+      overflow: hidden;
     }
 
     .commit-sha {
